# cookiecutter-python-project

./: Makefile  pyproject.toml
.devcontainer/: devcontainer.json
{{ cookiecutter.repo_name }}/: Makefile  cookiecutter.json  project.json  pyproject.toml
